# GOAT-s

./: .gitignore  README.md  pyproject.toml
mysite/: db.sqlite3  mysite_data.json
mysite/blog/: feeds.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tag.py  0005_rename_tag_post_tags.py
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: detail.html  list.html
mysite/blog/templatetags/: blog_tags.py
mysite/mysite/: settings.py
